# ansifilter

./: .gitlab-ci.yml  CMakeLists.txt  ChangeLog.adoc  INSTALL  README.adoc  makefile
man/: ansifilter.1
sh-completion/: ansifilter.bash  ansifilter.fish  ansifilter.zsh  gen-completions
src/: arg_parser.cpp  bbcodegenerator.cpp  bbcodegenerator.h  cmdlineoptions.cpp  cmdlineoptions.h  codegenerator.cpp  codegenerator.h  elementstyle.cpp  elementstyle.h  htmlgenerator.cpp  htmlgenerator.h  latexgenerator.cpp  latexgenerator.h  main.cpp  makefile  pangogenerator.cpp  plaintextgenerator.cpp  plaintextgenerator.h  platform_fs.cpp  preformatter.cpp  rtfgenerator.cpp  rtfgenerator.h  stringtools.cpp  stringtools.h  stylecolour.cpp  stylecolour.h  svggenerator.cpp  svggenerator.h  texgenerator.cpp  texgenerator.h  version.h
src/qt-gui/: ansifilter-gui.pro  moc_mydialog.cpp  mydialog.cpp  mydialog.h  ui_ansifilter.h
src/tcl/: tclansifilter.c
